--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://dostuff-assets.s3.amazonaws.com/property_asset/45528/insta-do206.jpg");
+    background-image: url("https://toppng.com/public/uploads/preview/seattle-wa-seattle-skyline-vector-11563157282s2g0078mgz.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
