--- a/experience.css
+++ b/experience.css
@@ -12,7 +12,7 @@ img {
 }
 h1 {
   font-size: 600%;
-  color: 464347;
+  color: #464347;
   margin: 20px 300px ;
   font-family: "Megrim", cursive;
 }
