--- a/about.css
+++ b/about.css
@@ -1,5 +1,6 @@
 body {
-    background-image: url("https://dostuff-assets.s3.amazonaws.com/property_asset/45528/insta-do206.jpg");
+    background-image: url("https://images.unsplash.com/photo-1524334228333-0f6db392f8a1?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8c3RhcnMlMjBibGFja3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80");
+    
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
