--- a/contact.css
+++ b/contact.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://dostuff-assets.s3.amazonaws.com/property_asset/45528/insta-do206.jpg");
+    background-image: url("https://www.crushpixel.com/big-static16/preview4/black-space-with-lot-stars-2469666.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
