--- a/contact.css
+++ b/contact.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://images.unsplash.com/photo-1524334228333-0f6db392f8a1?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8c3RhcnMlMjBibGFja3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80");
+    background-image: url("https://t3.ftcdn.net/jpg/02/66/25/12/360_F_266251260_lt1ONfTfr8VkjWc4xOSPUnubetJFh5xI.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
