--- a/home.css
+++ b/home.css
@@ -10,7 +10,7 @@ h1 {
   font-size: 550%;
   color: RGB(255, 255, 255);
   margin: 130px 300px ;
-  font-family: "Megrim", cursive;
+  font-family: "Proxima nova", cursive;
 }
 
 p {
