--- a/home.css
+++ b/home.css
@@ -15,7 +15,7 @@ h1 {
 
 p {
   font-size: 200%;
-  font-family: "Megrim", cursive;
+  font-family: "Gilroy", cursive;
   color: RGB(255, 255, 255);
 }
 
