--- a/home.css
+++ b/home.css
@@ -10,7 +10,7 @@ h1 {
   font-size: 550%;
   color: RGB(0, 102, 51);
   margin: 130px 300px ;
-  font-family: "TT Norms Pro";
+  font-family: "Helvetica Neue";
 }
 
 p {
