--- a/home.css
+++ b/home.css
@@ -10,12 +10,12 @@ h1 {
   font-size: 550%;
   color: RGB(71, 83, 148);
   margin: 130px 300px ;
-  font-family: "Comfortaa";
+  font-family: "Times New Roman";
 }
 
 p {
   font-size: 200%;
-  font-family: "Comfortaa", cursive;
+  font-family: "Times New Roman", cursive;
   color: RGB(71, 83, 148);
 }
 
