--- a/home.css
+++ b/home.css
@@ -59,15 +59,15 @@ li a:active {
   display: inline-block;
   width: 180px;
   padding: 15px 18px;
-  color: white;
-  border: 1.5px solid white;
+  color: RGB(71, 83, 148);
+  border: 1.5px solid RGB(71, 83, 148);
   text-align: center;
   outline: none;
   text-decoration: none;
   transition: background-color 0.2s ease-out, border-color 0.2s ease-out;
   border-radius: 20px;
   font-size: 20px;
-  font-family: "Comfortaa", cursive;
+  font-family: "Times New Roman", cursive;
   margin: 4px 2px;
 }
 
