--- a/home.css
+++ b/home.css
@@ -10,12 +10,12 @@ h1 {
   font-size: 550%;
   color: RGB(71, 83, 148);
   margin: 130px 300px ;
-  font-family: "Times New Roman";
+  font-family: "Comfortaa";
 }
 
 p {
   font-size: 200%;
-  font-family: "Times New Roman", cursive;
+  font-family: "Comfortaa", cursive;
   color: RGB(71, 83, 148);
 }
 
@@ -67,7 +67,7 @@ li a:active {
   transition: background-color 0.2s ease-out, border-color 0.2s ease-out;
   border-radius: 20px;
   font-size: 20px;
-  font-family: "Times New Roman", cursive;
+  font-family: "Comfortaa", cursive;
   margin: 4px 2px;
 }
 
