--- a/home.css
+++ b/home.css
@@ -39,7 +39,7 @@ a {
 
 li a {
   display: block;
-  color: white;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -75,7 +75,7 @@ li a:active {
   background-color: rgba(95, 126, 253, 0.4);
   border-color: rgba(95, 126, 253, 0.2);
   transition: background-color 0.3s ease-in, border-color 0.3s ease-in;
-  color: white;
+  color: black;
 }
 
 
