--- a/home.css
+++ b/home.css
@@ -10,7 +10,7 @@ h1 {
   font-size: 550%;
   color: RGB(71, 83, 148);
   margin: 130px 300px ;
-  font-family: "Comfortaa";
+  font-family: "Times New Roman";
 }
 
 p {
