--- a/about.css
+++ b/about.css
@@ -14,7 +14,7 @@ h1 {
   font-size: 600%;
   color: RGB(77, 137, 99);
   margin: 20px 300px ;
-  font-family: "MS Gothic";
+  font-family: "Comfortaa";
 }
 
 #element{
@@ -23,7 +23,7 @@ h1 {
   color:white;
   text-align: left;
   font-family: "Comfortaa", cursive;
-  background-color: rgba(177, 156, 249, .85);
+  background-color: rgba(71,83,148,1);
   border:white 1px solid;
   padding:15px;
   line-height: 30px;
