--- a/about.css
+++ b/about.css
@@ -20,7 +20,7 @@ h1 {
 #element{
   margin: 50px 220px;
   width:800px;
-  color:white;
+  color:black;
   text-align: left;
   font-family: "Comfortaa", cursive;
   background-color: rgba(71,83,148,1);
@@ -58,7 +58,7 @@ a {
 
 li a {
   display: block;
-  color: white;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
