--- a/about.css
+++ b/about.css
@@ -58,7 +58,7 @@ a {
 
 li a {
   display: block;
-  color: white;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
