--- a/resume.css
+++ b/resume.css
@@ -13,7 +13,7 @@
 
 .msg { padding: 10px; background: #222; position: relative; }
 .msg h1 { color: #fff;  }
-.msg a { margin-left: 20px; background: #408814; color: white; padding: 4px 8px; text-decoration: none; }
+.msg a { margin-left: 20px; background: white; color: white; padding: 4px 8px; text-decoration: none; }
 .msg a:hover { background: #266400; }
 
 /* //-- yui-grids style overrides -- */
