--- a/experience.css
+++ b/experience.css
@@ -4,7 +4,6 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     text-align: center;
-    text-color: white;
 }
 img {
   display: block;
@@ -62,7 +61,7 @@ a {
 
 li a {
   display: block;
-  color: white;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
