--- a/resume.css
+++ b/resume.css
@@ -62,6 +62,48 @@ a#pdf:hover { background: #222; }
 
 
 
+li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  border-radius: 20px;
+}
+
+li a:hover {
+  background-color: rgba(218, 189, 253, 0.4);
+}
+
+li a:active {
+  background-color: rgba(218, 189, 253, 0.4);
+}
+
+
+.button {
+  display: inline-block;
+  width: 180px;
+  padding: 15px 18px;
+  color: black;
+  border: 1.5px solid black;
+  text-align: center;
+  outline: none;
+  text-decoration: none;
+  transition: background-color 0.2s ease-out, border-color 0.2s ease-out;
+  border-radius: 20px;
+  font-size: 20px;
+  font-family: "Comfortaa", cursive;
+  margin: 4px 2px;
+}
+
+.button:hover,
+.button:active {
+  background-color: rgba(95, 126, 253, 0.4);
+  border-color: rgba(95, 126, 253, 0.2);
+  transition: background-color 0.3s ease-in, border-color 0.3s ease-in;
+  color: black;
+}
+
 /*
 ---------------------------------------------------------------------------------
 	STRIPPED DOWN RESUME TEMPLATE
