--- a/resume.css
+++ b/resume.css
@@ -1,9 +1,10 @@
 
-
+/*
 .msg { padding: 10px; background: #222; position: relative; }
 .msg h1 { color: #fff;  }
 .msg a { margin-left: 20px; background: white; color: white; padding: 4px 8px; text-decoration: none; }
 .msg a:hover { background: white; }
+*/
 
 /* //-- yui-grids style overrides -- */
 body { font-family: Georgia; color: #444; }
