--- a/resume.css
+++ b/resume.css
@@ -1,3 +1,9 @@
+h1 {
+  font-size: 200%;
+  color: RGB(71, 83, 148);
+  margin: 30px 300px ;
+  font-family: "Comfortaa", cursive;
+}
 
 /*
 .msg { padding: 10px; background: #222; position: relative; }
