--- a/resume.css
+++ b/resume.css
@@ -5,12 +5,12 @@ h1 {
   font-family: "Comfortaa", cursive;
 }
 
-/*
+
 .msg { padding: 10px; background: #222; position: relative; }
 .msg h1 { color: #fff;  }
 .msg a { margin-left: 20px; background: white; color: white; padding: 4px 8px; text-decoration: none; }
 .msg a:hover { background: white; }
-*/
+
 
 /* //-- yui-grids style overrides -- */
 body { font-family: Georgia; color: #444; }
@@ -18,13 +18,13 @@ body { font-family: Georgia; color: #444; }
 .yui-gf { margin-bottom: 2em; padding-bottom: 2em; border-bottom: 1px solid #ccc; }
 
 /* //-- header, body, footer -- */
-#hd { margin: 2.5em 0 3em 0; padding-bottom: 1.5em; border-bottom: 1px solid #ccc }
+/*#hd { margin: 2.5em 0 3em 0; padding-bottom: 1.5em; border-bottom: 1px solid #ccc }
 #hd h2 { text-transform: uppercase; letter-spacing: 2px; }
 #bd, #ft { margin-bottom: 2em; }
 
 /* //-- footer -- */
 #ft { padding: 1em 0 5em 0; font-size: 92%; border-top: 1px solid #ccc; text-align: center; }
-#ft p { margin-bottom: 0; text-align: center;   }
+#ft p { margin-bottom: 0; text-align: center;   }*/
 
 /* //-- core typography and style -- */
 #hd h1 { font-size: 48px; text-transform: uppercase; letter-spacing: 3px; }
@@ -46,7 +46,7 @@ p.enlarge span { color: #000 }
 /* //-- section styles -- */
 
 a#pdf { display: block; float: left; background: rgba(71,83,148,1); color: white; padding: 6px 50px 6px 12px; margin-bottom: 6px; text-decoration: none;  }
-a#pdf:hover { background: #222; }
+a#pdf:hover { background: rgba(71,83,148,0.5); }
 
 .job { position: relative; margin-bottom: 1em; padding-bottom: 1em; border-bottom: 1px solid #ccc; }
 .job h4 { position: absolute; top: 0.35em; right: 0 }
