--- a/resume.css
+++ b/resume.css
@@ -1,9 +1,4 @@
-h1 {
-  font-size: 200%;
-  color: RGB(71, 83, 148);
-  margin: 30px 300px ;
-  font-family: "Comfortaa", cursive;
-}
+
 
 
 .msg { padding: 10px; background: #222; position: relative; }
@@ -27,10 +22,10 @@ body { font-family: Georgia; color: #444; }
 #ft p { margin-bottom: 0; text-align: center;   }*/
 
 /* //-- core typography and style -- */
-#hd h1 { font-size: 48px; text-transform: uppercase; letter-spacing: 3px; }
+#hd h1 { font-size: 48px; letter-spacing: 3px; color: RGB(71, 83, 148); font-family: "Comfortaa", cursive;}
 h2 { font-size: 152% }
 h3, h4 { font-size: 122%; }
-h1, h2, h3, h4 { color: black; }
+h2, h3, h4 { color: black; }
 p { font-size: 100%; line-height: 18px; padding-right: 3em; }
 a { color: RGB(71, 83, 148)}
 a:hover { text-decoration: none; }
