--- a/resume.css
+++ b/resume.css
@@ -9,7 +9,7 @@
 /* //-- yui-grids style overrides -- */
 body { font-family: Georgia; color: black; }
 #inner { padding: 10px 80px; margin: 80px auto; background: white; border: solid #666; border-width: 8px 0 2px 0; }
-.yui-gf { margin-bottom: 2em; padding-bottom: 2em; border-bottom: 1px solid #ccc; }
+.yui-gf { margin-bottom: 2em; padding-bottom: 2em; border-bottom: 1px solid white; }
 
 /* //-- header, body, footer -- */
 /*#hd { margin: 2.5em 0 3em 0; padding-bottom: 1.5em; }
@@ -17,7 +17,7 @@ body { font-family: Georgia; color: black; }
 #bd, #ft { margin-bottom: 2em; }
 
 /* //-- footer -- */
-#ft { padding: 1em 0 5em 0; font-size: 92%; border-top: 1px solid #ccc; text-align: center; }
+#ft { padding: 1em 0 5em 0; font-size: 92%; border-top: 1px solid white; text-align: center; }
 #ft p { margin-bottom: 0; text-align: center;   }*/
 
 /* //-- core typography and style -- */
