--- a/resume.css
+++ b/resume.css
@@ -45,9 +45,9 @@ a#pdf:hover { background: rgba(71,83,148,0.5); }
 .skills-list {  }
 .skills-list ul { margin: 0; }
 .skills-list li { margin: 3px 0; padding: 3px 0; }
-.skills-list li span { font-size: 152%; display: block; margin-bottom: -2px; padding: 0 }
+.skills-list li span { font-size: 152%; display: block;  }
 .talent { width: 32%; float: left }
-.talent h2 { margin-bottom: 6px; }
+
 
 #srt-ttab { margin-bottom: 100px; text-align: center;  }
 #srt-ttab img.last { margin-top: 20px }
