--- a/experience.css
+++ b/experience.css
@@ -24,7 +24,7 @@ h1 {
   color:white;
   text-align: left;
   font-family: "Comfortaa", cursive;
-  background-color: rgba(71,83,148,0.5);
+  background-color: rgb(151, 160, 209);
   border:white 1px solid;
   padding:15px;
   line-height: 30px;
