--- a/experience.css
+++ b/experience.css
@@ -18,7 +18,7 @@ h1 {
 }
 
 h3 {
-  font-size: 10%;
+  font-size: 0.1%;
   color: rgb(85, 86, 87);
   font-family: "Comfortaa", cursive;
   font-style: italic;
@@ -29,6 +29,7 @@ h3 {
   margin: 50px 220px;
   width:800px;
   color:white;
+  text-color: white;
   text-align: left;
   font-family: "Comfortaa", cursive;
   background-color: rgb(151, 160, 209);
